--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,4 @@
     //lose on dying
 ///TODO: check if name, type inputs are correct
 ///TODO: write README
+///TODO: fix game_logs rewriting itself on every attack
