--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,13 @@
-///TODO: implement game
-    //game options: attack, parry, heal
-    //attack: stamina => consecutive turns to attack before waiting
-    //parry: parry stat, adds buff to defence
-    //heal: heal with function (add a potion class later?)
-///TODO: v0.1
+///v0.1
     //fight one enemy
     //win on killing said enemy
     //lose on dying
+
+///actual game
+    //game options: attack, parry
+    //attack: stamina => consecutive turns to attack before waiting
+    //parry: parry stat, adds buff to defence
+
 ///TODO: check if name, type inputs are correct
 ///TODO: write README
-///TODO: fix game_logs rewriting itself on every attack
+///TODO: balance game + rename types
